@@ -1,3 +1,7 @@
+drkns 08.07.2016 22:07:58 +0200 - build 4740
+
+1. Некорректная обработка backspace в local user menu.
+
 drkns 08.07.2016 09:12:06 +0200 - build 4739
 
 1. 0003265: Не работает "cd \ " в командной строке
